# areyouok-telegram

./: .coderabbit.yaml  .dockerignore  .env.example  CLAUDE.md  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.cursor/: mcp.json
.cursor/rules/: data-layer.mdc  handlers.mdc  jobs.mdc  llms.mdc  project.mdc
.github/workflows/: build.yml  ci.yml  claude.yml  clear-registry.yml  deploy.yml  lint.yml  tests.yml
scripts/: generate_encryption_salt.py  reset_database.py  simulate_conversation.py
scripts/simulator/: evaluators.py  messages.py  simulate.py
scripts/simulator/sim_characters/: singapore_student.md
scripts/simulator/sim_personas/: singapore_student.md
src/areyouok_telegram/: app.py  cli.py  config.py  lifecycle.py  logging.py  main.py  utils.py
src/areyouok_telegram/agent/: __init__.py  agent.py  chat.py  exceptions.py  responses.py  utils.py
src/areyouok_telegram/data/: __init__.py  chats.py  connection.py  context.py  embeddings.py  exceptions.py  llm_usage.py  media.py  messages.py  operations.py  sessions.py  updates.py  users.py  utils.py
src/areyouok_telegram/data/database/: __init__.py  connection.py  embeddings.py
src/areyouok_telegram/data/models/: __init__.py  chat.py  chat_event.py  chats.py  command_usage.py  context.py  guided_session.py  guided_sessions.py  job_state.py  llm_generation.py  llm_generations.py  llm_usage.py  media.py  media_file.py  message.py  messages.py  notification.py  notifications.py  onboarding.py  session.py  sessions.py  update.py  updates.py  user.py  user_metadata.py  users.py
src/areyouok_telegram/encryption/: __init__.py  chat_keys.py  constants.py  content.py  exceptions.py  user_keys.py
src/areyouok_telegram/handlers/: __init__.py  commands.py  constants.py  errors.py  exceptions.py  globals.py  media.py  media_utils.py  messages.py  preferences.py  settings.py  settings_utils.py  start.py  utils.py
src/areyouok_telegram/handlers/commands/: feedback.py  journal.py  preferences.py  start.py
src/areyouok_telegram/handlers/utils/: constants.py  media.py
src/areyouok_telegram/jobs/: __init__.py  base.py  context_embedding.py  context_indexing.py  conversation_processor.py  conversations.py  data_log_warning.py  evaluations.py  exceptions.py  ping.py  profile_generation.py  scheduler.py  session_cleanup.py  utils.py
src/areyouok_telegram/llms/: __init__.py  agent_anonymizer.py  agent_content_check.py  agent_country_timezone.py  agent_feedback_context.py  agent_journal_setup.py  agent_preferences.py  agent_settings.py  exceptions.py  models.py  utils.py
src/areyouok_telegram/llms/analytics/: __init__.py  anonymizer.py  content_check.py  context.py  context_compression.py
src/areyouok_telegram/llms/chat/: __init__.py  agent.py  constants.py  exceptions.py  personalities.py  (+3 more)
src/areyouok_telegram/research/: agents.py  commands.py  constants.py  handlers.py  model.py  setup.py  utils.py
src/areyouok_telegram/setup/: __init__.py  bot.py  conversations.py  database.py  exceptions.py  jobs.py  logging.py
src/areyouok_telegram/tests/: conftest.py  test_fixtures.py  test_handlers.py
src/areyouok_telegram/utils/: __init__.py  media.py  retry.py  text.py
tests/: conftest.py  test_app.py  test_fixtures.py
tests/helpers/: __init__.py  chat_helpers.py
tests/test_agent/: __init__.py  test_agent.py  test_exceptions.py  test_responses.py  test_utils.py
tests/test_data/: __init__.py  test_chats.py  test_connection.py  test_context.py  test_job_state.py  test_llm_usage.py  test_media.py  test_messages.py  test_operations.py  test_sessions.py  test_updates.py  test_users.py  test_utils.py
tests/test_data/llm/: __init__.py  test_llm_generation.py  test_llm_usage.py
tests/test_data/messaging/: __init__.py  test_chat.py  test_chat_event.py  test_context.py  test_guided_session.py  test_media_file.py  test_message.py  test_session.py
tests/test_data/system/: __init__.py  test_command_usage.py  test_job_state.py  test_notification.py  test_update.py
tests/test_data/test_models/: __init__.py  test_chat_event.py  test_chats.py  test_command_usage.py  test_context.py  test_guided_sessions.py  test_llm_generations.py  test_llm_usage.py  test_media.py  test_messages.py  test_notifications.py  test_onboarding.py  test_sessions.py  test_sessions_new.py  test_updates.py  test_user_metadata.py  test_users.py
tests/test_data/users/: __init__.py  test_user.py  test_user_metadata.py
tests/test_encryption/: test_chat_keys.py  test_content.py  test_user_keys.py
tests/test_handlers/: __init__.py  test_commands.py  test_errors.py  test_globals.py  test_media.py  test_media_utils.py  test_messages.py  test_preferences.py  test_settings.py  test_settings_utils.py  test_start.py  test_utils.py
tests/test_handlers/test_commands/: __init__.py  test_feedback.py  test_journal.py
tests/test_jobs/: __init__.py  test_base.py  test_context_embedding.py  test_context_indexing.py  test_conversations.py  test_data_log_warning.py  test_evaluations.py  test_ping.py  test_profile_generation.py  test_session_cleanup.py  test_utils.py
tests/test_llms/: test_agent_anonymizer.py  test_agent_content_check.py  test_agent_context_search.py  test_agent_feedback_context.py  test_agent_journal_prompts.py  test_agent_preferences.py  test_agent_profile_generation.py  test_agent_settings.py  test_exceptions.py  test_models.py  test_rag_utils.py  test_utils.py
tests/test_llms/test_analytics/: test_anonymizer.py  test_content_check.py  test_context.py  test_context_compression.py
tests/test_llms/test_chat/: __init__.py  test_agent.py  test_agents.py  test_constants.py  test_exceptions.py  test_personalities.py  test_prompt.py  test_responses.py  test_utils.py
tests/test_llms/test_models/: __init__.py  conftest.py  test_base.py
tests/test_llms/test_validators/: __init__.py  test_anonymizer.py  test_content_check.py
tests/test_setup/: test_bot.py  test_conversations.py  test_database.py  test_exceptions.py  test_jobs.py  test_logging.py
tests/test_utils/: test_media.py
(+66 files in other folders)
