[project]
name = "areyouok-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.1.1",
    "uvloop~=0.21.0",
    "python-telegram-bot~=22.3",
    "python-telegram-bot[job-queue]",
    "sqlalchemy~=2.0.41",
    "greenlet",
    "psycopg2~=2.9.10",
    "asyncpg~=0.30.0",
    "tenacity~=9.1.2",
]

[dependency-groups]
dev = [
    "ruff~=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/areyouok_telegram"]

[tool.uv]
required-version = "~=0.7.0"

[tool.ruff]
required-version = "~=0.12.0"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # Pycodestyle
    "FAST", # FastAPI
    "FBT", # flake8-boolean-trap
    "F", # Pyflakes
    "ICN", # import-convention
    "I", # isort
    "N", # pep8-naming
    "PERF", # Perflint
    "PLC", # Pylint-Convention
    "PLE", # Pylint-Error
    "PLW", # Pylint-Warning
    "Q", # flake8-quotes
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # Pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = true
detect-same-package = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers"
]
asyncio_mode = "auto"
pythonpath = ["src"]